# ai-ml-portfolio-template

./: CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
configs/: config.yaml  paths.yaml
src/: config.py  train.py
