[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_portfolio_project"
version = "0.1.0"
description = "Professional Machine Learning pipeline and portfolio asset."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
